--- a/haskell/paz.cabal
+++ b/haskell/paz.cabal
@@ -28,14 +28,14 @@ executable paz
     other-modules:    Paz
 
     -- LANGUAGE extensions used by modules in this package.
-    other-extensions: DataKinds,
-                      DeriveGeneric,
-                      OverloadedStrings,
-                      TypeOperators
+    -- other-extensions: DataKinds,
+    --                   DeriveGeneric,
+    --                   OverloadedStrings,
+    --                   TypeOperators
     build-depends:    base ^>=4.15.1.0,
                       bytestring >=0.10.12.1,
                       base64-bytestring ==1.2.1.0,
                       cryptohash-sha512 ==0.11.102.0,
-                      optparse-generic ==1.5.0
+                      optparse-applicative ==0.18.1.0
     hs-source-dirs:   app
     default-language: Haskell2010
