--- a/haskell/paz.cabal
+++ b/haskell/paz.cabal
@@ -25,7 +25,8 @@ executable paz
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    Paz
+    other-modules:    Paz,
+                      Password
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions: DataKinds,
