--- a/haskell/paz.cabal
+++ b/haskell/paz.cabal
@@ -40,7 +40,8 @@ executable paz
 
     -- Modules included in this executable, other than Main.
     other-modules:    Paz,
-                      Password
+                      Password,
+                      Config
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions: DataKinds,
@@ -50,5 +51,7 @@ executable paz
     build-depends:    bytestring >=0.10.12.1,
                       base64-bytestring ==1.2.1.0,
                       cryptohash-sha512 ==0.11.102.0,
-                      optparse-applicative ==0.18.1.0
+                      optparse-applicative ==0.18.1.0,
+                      directory ==1.3.6.2,
+                      containers ==0.6.4.1
     hs-source-dirs:   app
