--- a/haskell/paz.cabal
+++ b/haskell/paz.cabal
@@ -41,7 +41,9 @@ executable paz
     -- Modules included in this executable, other than Main.
     other-modules:    Paz,
                       Password,
-                      Config
+                      ConfigData,
+                      ConfigParser,
+                      ConfigProvider
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions: DataKinds,
