Now resolving the config via various places seems to work

--- a/haskell/paz.cabal
+++ b/haskell/paz.cabal
@@ -43,7 +43,8 @@ executable paz
                       Password,
                       ConfigData,
                       ConfigParser,
-                      ConfigProvider
+                      ConfigProvider,
+                      Resolve
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions: DataKinds,
