--- a/haskell/paz.cabal
+++ b/haskell/paz.cabal
@@ -44,7 +44,8 @@ executable paz
                       ConfigData,
                       ConfigParser,
                       ConfigProvider,
-                      Resolve
+                      Resolve,
+                      Bishop
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions: DataKinds,
@@ -58,5 +59,6 @@ executable paz
                       cryptohash-md5 ==0.11.101.0,
                       optparse-applicative ==0.18.1.0,
                       directory ==1.3.6.2,
-                      containers ==0.6.4.1
+                      containers ==0.6.4.1,
+                      array ==0.5.4.0
     hs-source-dirs:   app
